--- a/experiments/CMakeLists.txt
+++ b/experiments/CMakeLists.txt
@@ -1,6 +1,6 @@
 if(CELERO_ENABLE_EXPERIMENTS)
 	# Run the SUBDIRLIST macro located in the top level CMakeLists.txt file.
-	FILE(GLOB _ALL_FILES ./ ./*)
+    FILE(GLOB _ALL_FILES ./Demo* ./Exp*)
 	FOREACH(_FILE ${_ALL_FILES})
 	  IF(IS_DIRECTORY ${_FILE})
 	    ADD_SUBDIRECTORY(${_FILE})
